// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render Pagination component correctly 1`] = `
.c0 {
  margin: 0 auto;
  float: right;
}

.c0 li {
  float: left;
  margin-bottom: 32px;
  width: 32px;
  height: 32px;
}

.c1 {
  color: #0097A7;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  text-align: center;
  line-height: 32px;
  font-size: 1.5rem;
  color: #EEEEEE;
  background: #006064;
  pointer-events: none;
}

.c1:hover {
  color: #006064;
}

.c1:hover {
  background: #006064;
}

@media (max-width:1200px) {
  .c0 {
    float: none;
  }
}

@media (max-width:1200px) {
  .c0 li {
    margin-bottom: 0;
    width: calc(100% / 8);
  }
}

<div>
  <ul
    className="c0"
  >
    <li>
      <a
        active={true}
        className="c1"
        onClick={[Function]}
        style={Object {}}
      >
        1
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with both next page link and previous page link correctly 1`] = `
.c0 {
  margin: 0 auto;
  float: right;
}

.c0 li {
  float: left;
  margin-bottom: 32px;
  width: 32px;
  height: 32px;
}

.c2 {
  color: #0097A7;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  text-align: center;
  line-height: 32px;
  font-size: 1.5rem;
  color: #EEEEEE;
  background: #006064;
  pointer-events: none;
}

.c2:hover {
  color: #006064;
}

.c2:hover {
  background: #006064;
}

.c1 {
  color: #0097A7;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  text-align: center;
  line-height: 32px;
  font-size: 1.5rem;
  color: #EEEEEE;
  background: #0097A7;
  pointer-events: auto;
}

.c1:hover {
  color: #006064;
}

.c1:hover {
  background: #006064;
}

@media (max-width:1200px) {
  .c0 {
    float: none;
  }
}

@media (max-width:1200px) {
  .c0 li {
    margin-bottom: 0;
    width: calc(100% / 8);
  }
}

<div>
  <ul
    className="c0"
  >
    <li>
      <a
        className="c1"
        onClick={[Function]}
        style={Object {}}
      >
        ←
      </a>
    </li>
    <li>
      <a
        active={false}
        className="c1"
        onClick={[Function]}
        style={Object {}}
      >
        1
      </a>
    </li>
    <li>
      <a
        active={true}
        className="c2"
        onClick={[Function]}
        style={Object {}}
      >
        2
      </a>
    </li>
    <li>
      <a
        active={false}
        className="c1"
        onClick={[Function]}
        style={Object {}}
      >
        3
      </a>
    </li>
    <li>
      <a
        className="c1"
        onClick={[Function]}
        style={Object {}}
      >
        →
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with previous page link correctly 1`] = `
.c0 {
  margin: 0 auto;
  float: right;
}

.c0 li {
  float: left;
  margin-bottom: 32px;
  width: 32px;
  height: 32px;
}

.c2 {
  color: #0097A7;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  text-align: center;
  line-height: 32px;
  font-size: 1.5rem;
  color: #EEEEEE;
  background: #006064;
  pointer-events: none;
}

.c2:hover {
  color: #006064;
}

.c2:hover {
  background: #006064;
}

.c1 {
  color: #0097A7;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  text-align: center;
  line-height: 32px;
  font-size: 1.5rem;
  color: #EEEEEE;
  background: #0097A7;
  pointer-events: auto;
}

.c1:hover {
  color: #006064;
}

.c1:hover {
  background: #006064;
}

@media (max-width:1200px) {
  .c0 {
    float: none;
  }
}

@media (max-width:1200px) {
  .c0 li {
    margin-bottom: 0;
    width: calc(100% / 8);
  }
}

<div>
  <ul
    className="c0"
  >
    <li>
      <a
        className="c1"
        onClick={[Function]}
        style={Object {}}
      >
        ←
      </a>
    </li>
    <li>
      <a
        active={false}
        className="c1"
        onClick={[Function]}
        style={Object {}}
      >
        1
      </a>
    </li>
    <li>
      <a
        active={false}
        className="c1"
        onClick={[Function]}
        style={Object {}}
      >
        2
      </a>
    </li>
    <li>
      <a
        active={true}
        className="c2"
        onClick={[Function]}
        style={Object {}}
      >
        3
      </a>
    </li>
  </ul>
</div>
`;
